# DRL-RMS-Framework

./: .gitignore  readme.md
cluster-services/: metallb_l2.yaml  metallb_pool.yaml
cluster-services/docker-registry/: docker-depl.yaml  docker-pvc.yaml  docker-serv.yaml
cluster-services/gpu-jupyter/: Dockerfile  gpu-jupyter.yaml  gpu-pvc.yaml  gpu-sa.yaml
cluster-services/gpu-jupyter/notebooks/: df-gen.ipynb  (+1 more)
cluster-services/monitoring/: additional-scrape-configs.yaml  monitoring-chart.yaml  prometheus-additional.yaml  prometheus_config.yaml
framework/: models.py  pyproject.toml  rms_config.py
framework/agent/: agentCRD.yaml  example_agent.yaml
framework/consumer/: Dockerfile  consumer-a.yaml  consumer-b.yaml  consumer-c.yaml  consumer-d.yaml  consumer-e.yaml  consumer-f.yaml  consumer-g.yaml  consumer-h.yaml  consumer_model.py
framework/controller/: Dockerfile  controller-depl.yaml  controller-permissions.yaml  controller-service.yaml  controller.py  utils.py
framework/controller/frontend/: README.md  index.html  input.css  llm-assistant.html  monitoring.html  package-lock.json  package.json  tailwind.config.js
framework/controller/frontend/css/: main.css
framework/drl-system/: Dockerfile  drl-model.py  drl-model.yaml
framework/drl-system/drl-models/: deployment_embeddings.json  model-meta-v10.h5  model-meta-v9-2.h5  model-meta-v9.h5  scaler-meta-v9-2.pkl  scaler-meta-v9.pkl
framework/testing/: test_watcher_watch_agents.py
framework/watcher/: Dockerfile  helpers.py  metrics.py  watcher-depl.yaml  watcher-permissions.yaml  watcher.py
(+5 files in other folders)
